GNOME Bugzilla – Bug 696515
Fix build on non-Linux platforms
Last modified: 2013-03-27 12:01:19 UTC
power: fails to build when gudev disabled (non-linux) NULL needs stdlib.h. With gudev support enabled we get that through gudev.h, but when gudev support is disabled we don't get it. So just include stdlib.h unconditionally.
Created attachment 239698 [details] [review] Fix build on non-Linux platforms We need stdlib.h to get the definition of NULL.
Review of attachment 239698 [details] [review]: sure
Review of attachment 239698 [details] [review]: After the freeze is better...
I have pushed it to master, I'll wait till 3.8 is released to push it to gnome-3-8. Thanks!
Pushed to gnome-3-8.