Fix build on non-Linux platforms

We need stdlib.h to get the definition of NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=696515