plugins/power/gsd-backlight-linux.c
@@ -19,6 +19,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
+#include <stdlib.h>
+
 #include "config.h"
 
 #include "gsd-backlight-linux.h"
